# StudyFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/studyffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/studyffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/studyffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
